# Mategram

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  vp9player.cpp
app/src/main/java/com/xxcactussell/mategram/: ChatClientData.kt  MainActivity.kt  MainViewModel.kt  Mategram.kt  NotificationSettingsManager.kt  TelegramCredentials.kt  TelegramRepository.kt
app/src/main/java/com/xxcactussell/mategram/domain/entity/: AuthState.kt
app/src/main/java/com/xxcactussell/mategram/kotlinx/telegram/core/: ResultHandlerStateFlow.kt  TelegramException.kt  TelegramFlow.kt  TelegramRepository.kt
app/src/main/java/com/xxcactussell/mategram/kotlinx/telegram/coroutines/: AccentColorFunctionsKtx.kt  AccountFunctionsKtx.kt  AnimationFunctionsKtx.kt  AuthenticationFunctionsKtx.kt  AutoDownloadSettingsFunctionsKtx.kt  AutosaveSettingsFunctionsKtx.kt  BackgroundFunctionsKtx.kt  BasicGroupFunctionsKtx.kt  BotInfoFunctionsKtx.kt  BotMediaPreviewFunctionsKtx.kt  BusinessConnectedBotFunctionsKtx.kt  CallFunctionsKtx.kt  ChatFunctionsKtx.kt  CommonFunctionsKtx.kt  ConnectedAffiliateProgramFunctionsKtx.kt  ContactFunctionsKtx.kt  CountFunctionsKtx.kt  DatabaseFunctionsKtx.kt  DateFunctionsKtx.kt  EmailFunctionsKtx.kt  EmojiFunctionsKtx.kt  FileFunctionsKtx.kt  ForumTopicFunctionsKtx.kt  GameFunctionsKtx.kt  GiftFunctionsKtx.kt  LanguageFunctionsKtx.kt  LogFunctionsKtx.kt  MessageFunctionsKtx.kt  NetworkFunctionsKtx.kt  NotificationFunctionsKtx.kt  OrderInfoFunctionsKtx.kt  PassportFunctionsKtx.kt  PasswordFunctionsKtx.kt  PaymentFunctionsKtx.kt  PhoneNumberFunctionsKtx.kt  PhotoFunctionsKtx.kt  PollFunctionsKtx.kt  PremiumFeatureFunctionsKtx.kt  ProxyFunctionsKtx.kt  QueryFunctionsKtx.kt  (+12 more)
app/src/main/java/com/xxcactussell/mategram/kotlinx/telegram/extensions/: AccentColorKtx.kt  BaseKtx.kt  BasicGroupKtx.kt  BusinessConnectionKtx.kt  CallKtx.kt  ChatKtx.kt  CommonKtx.kt  FileKtx.kt  GiftKtx.kt  GroupCallKtx.kt  MessageKtx.kt  NotificationGroupKtx.kt  NotificationSoundKtx.kt  ProfileAccentColorKtx.kt  ProxyKtx.kt  SavedMessagesTopicKtx.kt  SecretChatKtx.kt  SessionKtx.kt  StoryKtx.kt  SupergroupKtx.kt  TelegramKtx.kt  UserKtx.kt
app/src/main/java/com/xxcactussell/mategram/kotlinx/telegram/flows/: AccentColorUpdatesKtx.kt  AnimationUpdatesKtx.kt  BasicGroupUpdatesKtx.kt  CallUpdatesKtx.kt  ChatUpdatesKtx.kt  CommonUpdatesKtx.kt  CountUpdatesKtx.kt  FileUpdatesKtx.kt  MessageUpdatesKtx.kt  NotificationUpdatesKtx.kt  PollUpdatesKtx.kt  QuickReplyShortcutUpdatesKtx.kt  ReactionTypeUpdatesKtx.kt  StickerUpdatesKtx.kt  StoryUpdatesKtx.kt  SupergroupUpdatesKtx.kt  UserUpdatesKtx.kt
app/src/main/java/com/xxcactussell/mategram/notifications/: FcmManager.kt  FcmService.kt  MessageService.kt  NotificationSettingsManager.kt  NotifictionManager.kt
app/src/main/java/com/xxcactussell/mategram/ui/: ChatInfoContent.kt  ChatListView.kt  FcmManager.kt  FcmService.kt  Login2FAView.kt  LoginCodeView.kt  LoginPhoneView.kt  LoginView.kt  NotifictionManager.kt  StickerPlayer.kt  VP9PlayerView.kt
app/src/main/java/com/xxcactussell/mategram/ui/chat/: ChatDetailPane.kt  ChatImageViewer.kt  ChatInfoContent.kt  ChatInfoPane.kt  ChatListView.kt  ChatMessageContent.kt  Message.kt  chatView.kt
app/src/main/java/com/xxcactussell/mategram/ui/loginView/: Login2FAView.kt  LoginCodeView.kt  LoginPhoneView.kt  LoginView.kt
app/src/main/java/com/xxcactussell/mategram/ui/navcontroller/: AppNavHost.kt
app/src/main/java/org/drinkless/tdlib/: TdApi.java
app/src/main/res/drawable/: baseline_camera.xml  baseline_dots.xml  baseline_qr.xml  baseline_video_message.xml  baseline_voice_message.xml  ic_baseline_sms.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml  ic_password.xml  ic_sim.xml  ic_trash.xml  ic_video_message.xml  mdi__share_all.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
